--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
